# Client

./: .gitignore  Makefile  README.md  pkg.yaml  project.yaml  schema.sql
bot/: .env.sample  Cargo.toml  Makefile  pkg.yaml  project.yaml
bot/.sqlx/: query-0839f70f7ea37856c2a85f8d9f26e1f75c85443eb010abb52150a2df82ad6608.json  query-0a99408d4789a4e0d97c8212347cfabe6569415fd5c6d12afc0bfc08d2dbfbde.json  query-14e16ece02711b6143e61e1025a768f9af2089e74d75b968db508f5a729b95f5.json  query-256fcb8fd45b70d4ad66c754efe8f219efebede14d7b9789331c81f44f6026df.json  query-27da613d0b35af6f8b3047ae452a6ba33fffac83caf1441496cceba871e66940.json  query-36bd6c879ed82ead5556e8b42b5475812084c50703a049a61f4f0f962f4e8ac8.json  query-376f5bacaaf5958576333031f5699f9a23f94173d0ab84990629b02970b10b85.json  query-381b4e99c16253a7775375a6a71bd274bca6cfd53a0ac939e48df1b32dbe6ec1.json  query-385dcc4d205570055c4df169c82ee90caaa35b89ef90b01a14e52003ebc7e156.json  query-3c15f2129b3d332963fc41857661b6b4447f3eb36247e17b900b034934eeb391.json  query-4b216254624357e07abd8e0281224b2d47af1d4fcf54bad090847e03cd05b1ea.json  query-4b7723f69357d414fe2c0c90002a0730805e607d82c56da8ab4b1abf2569663d.json  query-51408f003127a1f0abf24fa06ac13f3ce78bd1518ae8d6d3a9494e261f138b46.json  query-73b99d629e0672d4a609f37bf4ed07ca8164cc4e3d80b0bbaa35dc73d8002d36.json  query-76fb3f0eba09013de0aeeeb4bf30c3a6c7d8836f4ab2483b77a51ddd1bbc2478.json  query-7b30bfb5337929a44b51e730696bfedbc46fcedec4ded2f266742b03cce8c44d.json  query-7c2e43a984ddf333be2f23387fb0a0787c3a555489e39e1f8cc5413fe610837c.json  (+19 more)
bot/src/: backups.rs  config.rs  (+4 more)
(+79 files in other folders)
