[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
serde = "1.0"
log = "0.4"
env_logger = "0.11"
serde_json = "1.0"
serde_repr = "0.1"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal", "json"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
chrono = { version = "0.4", features = ["serde"]}
futures-util = "0.3"
ring = "0.17"
rand = "0.8"
data-encoding = "2.6"
indexmap = { version = "2", features = ["serde"] }
serde_yaml = "0.9"
once_cell = "1.17"

[dependencies.tokio]
version = "1"
default-features = true
features = ["fs", "macros", "rt", "sync", "time", "rt-multi-thread"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend"]

[dependencies.botox]
git = "https://github.com/infinitybotlist/botox"
branch = "main"

